# ai-financial-support-platform

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/ai/: embeddings.py  factory.py  llm.py  prompt_builder.py  retrieval.py
backend/app/ai/base/: __init__.py  embedding_base.py  llm_base.py
backend/app/ai/providers/: __init__.py  gemini_embedding.py  gemini_llm.py  groq_llm.py  local_embedding.py  openai_embedding.py  openai_llm.py
backend/app/api/: deps.py
backend/app/api/middleware/: auth_context.py  request_logging.py
backend/app/api/routers/: __init__.py  admin.py  auth.py  chat.py  health.py  knowledge.py
backend/app/core/: cache.py  config.py  logging.py  rate_limiter.py  security.py
backend/app/db/: schema_auth_migrate.py  schema_knowledge_migrate.py  session.py
backend/app/db/models/: __init__.py  chat_log.py  document.py  knowledge_chunk.py  knowledge_source.py  refresh_token.py  text_entry.py  unresolved_question.py  url_entry.py  user.py
backend/app/db/repositories/: chat_log_repo.py  knowledge_repo.py  metrics_repo.py  user_repo.py  (+2 more)
backend/app/ingestion/: chunker.py
backend/app/schemas/: admin.py  auth.py  chat.py  ingestion.py
backend/app/services/: admin_service.py  auth_service.py  background_jobs.py  chat_service.py  ingestion_service.py  input_sanitizer.py  unresolved_detection.py
backend/docker/: Dockerfile  docker-compose.yml
backend/scripts/: migrate_auth.sql  run_migrations.py
backend/tests/: test_api_contracts.py
(+53 files in other folders)
